--- a/frontend/app/styles/components.css
+++ b/frontend/app/styles/components.css
@@ -34,6 +34,13 @@ html, body, #page-content{
   width: auto;
 }
 
+hr {
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+    border: 0;
+    border-top: 1px solid rgba(0,0,0,.1);
+}
+
 /* Input placeholder
 ----------------------------------*/
 
@@ -184,13 +191,13 @@ html, body, #page-content{
 --------------------------------------------------*/
 
 .main-container {
-  margin: 60px 0 0 250px;
-  padding: 10px 26px 40px 26px;
-  -ms-overflow-x: hidden;
-  overflow-x: hidden;
-  position: relative;
-  z-index: 4;
-  height: 100%
+    margin: -6px 0 0 300px;
+    padding: 0px 26px 40px 26px;
+    -ms-overflow-x: hidden;
+    overflow-x: hidden;
+    position: relative;
+    z-index: 4;
+    height: 100%;
 }
 
 /* Main Container > Media query
