--- a/frontend/app/templates/partials/navbar-top.html
+++ b/frontend/app/templates/partials/navbar-top.html
@@ -1,11 +1,15 @@
 <nav class="navbar navbar-expand-lg fixed-top bg-darkblue py-1 navbar-dark">
-  <a class="navbar-brand" href="#!/home">
-    Manager Users
-  </a>
+  <a class="navbar-brand" href="#!/home">MANAGER USERS</a>
   <div class="collapse navbar-collapse">
     <div class="navbar-nav ml-auto">
+
+      <div class="full-width text-center" style="width: 100%;">
+        <span class="nav-bar-user-selected">{{vm.userSelected}}</span>
+      </div>
+
+
      <!--  <a class="nav-item nav-link" href="#!/home">Historico</a> -->
-      
+       
 <!--       <div class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href role="button" aria-haspopup="true" aria-expanded="false">Listas e Provas</a>
         <div class="dropdown-menu">
