--- a/frontend/app/styles/bootstrap-modifications.css
+++ b/frontend/app/styles/bootstrap-modifications.css
@@ -21,9 +21,10 @@ body{padding-top:55px;}
 body.hide-navbar{padding-top:0;}
 
 .navbar.bg-darkblue{
-  background-color: #e88e1d;
+  background-color: #d32f2f;
   /* border-bottom: 5px solid #48536D; */
   box-shadow: 0px 2px 10px #888888;
+  height: 70px;
 }
 
 /* Tooltip
@@ -54,4 +55,54 @@ body.hide-navbar{padding-top:0;}
 .tooltip.bs-tooltip-auto[x-placement^=bottom] .arrow::before,
 .tooltip.bs-tooltip-bottom .arrow::before{
   border-bottom-color: #d6d6d6;
+}
+
+
+.card {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+    left: 50px;
+    padding: 6px;
+}
+
+
+::-webkit-scrollbar
+{
+  width: 12px;  /* for vertical scrollbars */
+  height: 12px; /* for horizontal scrollbars */
+}
+
+::-webkit-scrollbar-track
+{
+  background: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-thumb
+{
+  background: rgba(0, 0, 0, 0.5);
+}
+
+
+.ml-5 {
+    margin-left: -5rem!important;
+}
+
+.ml-auto {
+    margin-left: auto!important;
+    width: 100%
+}
+
+.nav-bar-user-selected{
+  color:white;
+  font-size: 22px;
+  padding: 4px 0;
 }
