--- a/frontend/app/templates/home/home.html
+++ b/frontend/app/templates/home/home.html
@@ -1,13 +1,19 @@
 <div class="container" ng-init="vm.init()">
   <div class="vgap-30"><!-- Vertical Gap 30px --></div>
+  <div class="pull-left" style="margin:12px; font-size: 125%">
+      
+      <span ng-if="vm.userId == null && vm.histories.length > 0"> Selecione um usuário para ver o histórico ou editar</span>
+      <span ng-if="vm.histories.lentgh == 0"> Clique em adicionar novo usuário</span>
+
+  </div>
   <div class="pull-right">
     <div class="vgap-10 "><!-- Vertical Gap 30px --></div>
     <button type="button" class="btn btn-outline-primary " ng-click="vm.addUser()">Adicionar Usuário</button>
-    <button type="button" class="btn btn-outline-primary " ng-click="vm.editUser()">Editar Usuário</button>
+    <button type="button" class="btn btn-outline-primary " ng-click="vm.editUser()" ng-disabled="vm.userId == null">Editar Usuário</button>
     <button type="button" class="btn btn-outline-primary " ng-click="vm.viewHistories()">Ver Historico</button>
   </div>
   <hr>
-  <div class="" ng-if="vm.actionadduser">
+  <div class="" ng-if="vm.actionadduser" style="padding:0 100px;">
   	<h1 class="bebas blue-grey-text">Adicionar Usuário</h1>
     <div class="vgap-10"><!-- Vertical Gap 30px --></div>
     <div>
@@ -35,7 +41,7 @@
     </div>
   </div>
 
-  <div class="" ng-if="vm.actionedituser">
+  <div class="" ng-if="vm.actionedituser" style="padding:0 100px;">
     <h1 class="bebas blue-grey-text">Editar Usuário</h1>
     <div class="vgap-10"><!-- Vertical Gap 30px --></div>
     <div>
@@ -68,7 +74,7 @@
   <ul class="timeline" ng-if="vm.actionviewhistories">
       <li ng-repeat="history in vm.histories"><!--Time Line Element-->
         <div class="timeline-badge up"><i class="fa fa-navicon"></i></div>
-        <div class="timeline-panel">
+        <div class="card">
           <div class="timeline-heading">
             <h4 class="timeline-title">{{history.title}}</h4>
           </div>
