--- a/frontend/app/templates/partials/side-navbar.html
+++ b/frontend/app/templates/partials/side-navbar.html
@@ -4,9 +4,12 @@
     AngularJS $locationProvider now uses "hashbang" notation #!
     http://stackoverflow.com/questions/16677528/location-switching-between-html5-and-hashbang-mode-link-rewriting
   -->
-
+  <div class="text-center" style="color:black; margin: 12px 0">
+  	<span style="font-size:150%;">Lista de usuários</span>
+  </div>
+  
   <ul class="list-group">
-   <a ng-repeat="user in vm.users" href="#!/home/{{user.id}}" class="list-group-item" ng-class="{active:activeRoute=='user'}">
+   <a ng-repeat="user in vm.users" href="#!/home/{{user.id}}" ng-click="vm.getUser(user)" class="list-group-item" ng-class="{active:activeRoute=='user'}">
       <i class="fa fa-user"></i><span>&nbsp;&nbsp;{{user.username}}</span>
     </a>
   </ul>
