--- a/frontend/app/styles/bootstrap-modifications.css
+++ b/frontend/app/styles/bootstrap-modifications.css
@@ -106,3 +106,15 @@ body.hide-navbar{padding-top:0;}
   font-size: 22px;
   padding: 4px 0;
 }
+
+.btn-outline-primary {
+ color: #000000;
+    background-color: transparent;
+    background-image: none;
+    border-color: rgba(255, 255, 255, 0);
+}
+
+
+
+
+
