--- a/frontend/app/templates/home/home.html
+++ b/frontend/app/templates/home/home.html
@@ -72,6 +72,7 @@
   <div class="vgap-30"><!-- Vertical Gap 30px --></div>
 
   <ul class="timeline" ng-if="vm.actionviewhistories">
+    <h1 class="bebas margim-bebas blue-grey-text">Historico de ações</h1>
       <li ng-repeat="history in vm.histories"><!--Time Line Element-->
         <div class="timeline-badge up"><i class="fa fa-navicon"></i></div>
         <div class="card">
